tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/virtualservice/set_header/a/to_tproxy/_test_context/VirtualService.2452326431.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-98059
spec:
  hosts:
  - tproxy
  http:
  - headers:
      request:
        set:
          x-custom: some-value
    route:
    - destination:
        host: tproxy
